# Fault-Injection-Env-for-Redundant-Application

./: .gitignore  README.md
prj_G19/: Cargo.toml
prj_G19/src/: main.rs
prj_G19/src/analyzer/: mod.rs
prj_G19/src/data/: input.txt
prj_G19/src/data/dataset/: dataset_matrix.txt  dataset_vector.txt
prj_G19/src/fault_env/: mod.rs
prj_G19/src/fault_list_manager/: mod.rs  static_analysis.rs
prj_G19/src/fault_list_manager/file_fault_list/: mod.rs
prj_G19/src/fault_list_manager/file_fault_list/bubble_sort/: bubble_sort_FL.json  bubble_sort_ris.json  mod.rs
prj_G19/src/fault_list_manager/file_fault_list/matrix_multiplication/: matrix_mul_FL.json  matrix_mul_ris.json  mod.rs
prj_G19/src/fault_list_manager/file_fault_list/selection_sort/: mod.rs  sel_sort_FL.json  sel_sort_ris.json
prj_G19/src/fault_list_manager/file_fault_list/tests/: prova.rs  prova_mat.json  prova_mat.rs
prj_G19/src/hardened/: mod.rs
prj_G19/src/hardened/bubble_sort_hardened/: mod.rs  tests.rs
prj_G19/src/hardened/files/: dizionario.txt  readme.md
prj_G19/src/hardened/matrix_multiplication_hardened/: mod.rs  tests.rs
prj_G19/src/hardened/selection_sort_hardened/: mod.rs  tests.rs
prj_G19/src/injector/: algorithms.rs  mod.rs
prj_G19/src/pdf_generator/: chart_generator.rs  encoder.rs  mod.rs
